corpus/kernel/6.17/networking/device_drivers/ethernet/index.md
---
collection: kernel
version: "6.17"
title: "Ethernet Device Drivers"
source_url: https://www.kernel.org/doc/html/v6.17/networking/device_drivers/ethernet/index.html
fetched_at: 2026-09-16T16:40:19+00:00
---
# Ethernet Device Drivers

Device drivers for Ethernet and Ethernet-based virtual function devices.

Contents:

- [Linux and the 3Com EtherLink III Series Ethercards (driver v1.18c and higher)](3com/3c509.md)
  - [Introduction](3com/3c509.md#introduction)
  - [Special Driver Features](3com/3c509.md#special-driver-features)
  - [Full-duplex mode](3com/3c509.md#full-duplex-mode)
  - [Available Transceiver Types](3com/3c509.md#available-transceiver-types)
  - [Revision history (this file)](3com/3c509.md#revision-history-this-file)
- [3Com Vortex device driver](3com/vortex.md)
  - [Module parameters](3com/vortex.md#module-parameters)
- [Linux kernel driver for Elastic Network Adapter (ENA) family](amazon/ena.md)
  - [Overview](amazon/ena.md#overview)
  - [ENA Source Code Directory Structure](amazon/ena.md#ena-source-code-directory-structure)
  - [Management Interface:](amazon/ena.md#management-interface)
  - [Data Path Interface](amazon/ena.md#data-path-interface)
  - [Interrupt Modes](amazon/ena.md#interrupt-modes)
  - [Interrupt Moderation](amazon/ena.md#interrupt-moderation)
  - [RX copybreak](amazon/ena.md#rx-copybreak)
  - [PTP Hardware Clock (PHC)](amazon/ena.md#ptp-hardware-clock-phc)
  - [Statistics](amazon/ena.md#statistics)
  - [MTU](amazon/ena.md#mtu)
  - [Stateless Offloads](amazon/ena.md#stateless-offloads)
  - [RSS](amazon/ena.md#rss)
  - [DEVLINK SUPPORT](amazon/ena.md#devlink-support)
  - [DATA PATH](amazon/ena.md#data-path)
- [Altera Triple-Speed Ethernet MAC driver](altera/altera_tse.md)
  - [1. Kernel Configuration](altera/altera_tse.md#kernel-configuration)
  - [2. Driver parameters list](altera/altera_tse.md#driver-parameters-list)
  - [3. Command line options](altera/altera_tse.md#command-line-options)
  - [4. Driver information and notes](altera/altera_tse.md#driver-information-and-notes)
  - [5. Debug Information](altera/altera_tse.md#debug-information)
  - [6. Statistics Support](altera/altera_tse.md#statistics-support)
- [Linux Driver for the AMD/Pensando(R) DSC adapter family](amd/pds_core.md)
  - [Identifying the Adapter](amd/pds_core.md#identifying-the-adapter)
  - [Info versions](amd/pds_core.md#info-versions)
  - [Parameters](amd/pds_core.md#parameters)
  - [Firmware Management](amd/pds_core.md#firmware-management)
  - [Health Reporters](amd/pds_core.md#health-reporters)
  - [Enabling the driver](amd/pds_core.md#enabling-the-driver)
  - [Support](amd/pds_core.md#support)
- [PCI vDPA driver for the AMD/Pensando(R) DSC adapter family](amd/pds_vdpa.md)
  - [Overview](amd/pds_vdpa.md#overview)
  - [Using the device](amd/pds_vdpa.md#using-the-device)
  - [Enabling the driver](amd/pds_vdpa.md#enabling-the-driver)
  - [Support](amd/pds_vdpa.md#support)
- [PCI VFIO driver for the AMD/Pensando(R) DSC adapter family](amd/pds_vfio_pci.md)
  - [Overview](amd/pds_vfio_pci.md#overview)
  - [Using the device](amd/pds_vfio_pci.md#using-the-device)
  - [Enabling the driver](amd/pds_vfio_pci.md#enabling-the-driver)
  - [Support](amd/pds_vfio_pci.md#support)
- [Marvell(Aquantia) AQtion Driver](aquantia/atlantic.md)
  - [Identifying Your Adapter](aquantia/atlantic.md#identifying-your-adapter)
  - [Configuration](aquantia/atlantic.md#configuration)
  - [Supported ethtool options](aquantia/atlantic.md#supported-ethtool-options)
  - [Command Line Parameters](aquantia/atlantic.md#command-line-parameters)
  - [Config file parameters](aquantia/atlantic.md#config-file-parameters)
  - [Support](aquantia/atlantic.md#support)
  - [License](aquantia/atlantic.md#license)
- [Chelsio N210 10Gb Ethernet Network Controller](chelsio/cxgb.md)
  - [Introduction](chelsio/cxgb.md#introduction)
  - [Features](chelsio/cxgb.md#features)
  - [Performance](chelsio/cxgb.md#performance)
  - [Driver Messages](chelsio/cxgb.md#driver-messages)
  - [Known Issues](chelsio/cxgb.md#known-issues)
  - [Support](chelsio/cxgb.md#support)
- [Cirrus Logic LAN CS8900/CS8920 Ethernet Adapters](cirrus/cs89x0.md)
  - [1. Cirrus Logic LAN CS8900/CS8920 Ethernet Adapters](cirrus/cs89x0.md#id1)
  - [1.1. Product Overview](cirrus/cs89x0.md#product-overview)
  - [1.2. Driver Description](cirrus/cs89x0.md#driver-description)
  - [2. Adapter Installation and Configuration](cirrus/cs89x0.md#adapter-installation-and-configuration)
  - [3. Loading the Driver as a Module](cirrus/cs89x0.md#loading-the-driver-as-a-module)
  - [4. Compiling the Driver](cirrus/cs89x0.md#compiling-the-driver)
  - [5. Testing and Troubleshooting](cirrus/cs89x0.md#testing-and-troubleshooting)
  - [6. Technical Support](cirrus/cs89x0.md#technical-support)
- [D-Link DL2000-based Gigabit Ethernet Adapter Installation](dlink/dl2k.md)
  - [Compatibility List](dlink/dl2k.md#compatibility-list)
  - [Quick Install](dlink/dl2k.md#quick-install)
  - [Compiling the Driver](dlink/dl2k.md#compiling-the-driver)
  - [Installing the Driver](dlink/dl2k.md#installing-the-driver)
  - [Parameter Description](dlink/dl2k.md#parameter-description)
  - [Configuration Script Sample](dlink/dl2k.md#configuration-script-sample)
  - [Troubleshooting](dlink/dl2k.md#troubleshooting)
- [DM9000 Network driver](davicom/dm9000.md)
  - [Introduction](davicom/dm9000.md#introduction)
  - [Defining the platform device](davicom/dm9000.md#defining-the-platform-device)
  - [Platform data](davicom/dm9000.md#platform-data)
  - [PHY Link state polling](davicom/dm9000.md#phy-link-state-polling)
  - [DM9000A / DM9000B](davicom/dm9000.md#dm9000a-dm9000b)
  - [ethtool](davicom/dm9000.md#ethtool)
- [Davicom DM9102(A)/DM9132/DM9801 fast ethernet driver for Linux](dec/dmfe.md)
- [The QorIQ DPAA Ethernet Driver](freescale/dpaa.md)
  - [DPAA Ethernet Overview](freescale/dpaa.md#dpaa-ethernet-overview)
  - [DPAA Ethernet Supported SoCs](freescale/dpaa.md#dpaa-ethernet-supported-socs)
  - [Configuring DPAA Ethernet in your kernel](freescale/dpaa.md#configuring-dpaa-ethernet-in-your-kernel)
  - [DPAA Ethernet Frame Processing](freescale/dpaa.md#dpaa-ethernet-frame-processing)
  - [DPAA Ethernet Features](freescale/dpaa.md#dpaa-ethernet-features)
  - [DPAA IRQ Affinity and Receive Side Scaling](freescale/dpaa.md#dpaa-irq-affinity-and-receive-side-scaling)
  - [Debugging](freescale/dpaa.md#debugging)
- [DPAA2 Documentation](freescale/dpaa2/index.md)
  - [DPAA2 (Data Path Acceleration Architecture Gen2) Overview](freescale/dpaa2/overview.md)
  - [DPAA2 DPIO (Data Path I/O) Overview](freescale/dpaa2/dpio-driver.md)
  - [DPAA2 Ethernet driver](freescale/dpaa2/ethernet-driver.md)
  - [DPAA2 MAC / PHY support](freescale/dpaa2/mac-phy-support.md)
  - [DPAA2 Switch driver](freescale/dpaa2/switch-driver.md)
- [The Gianfar Ethernet Driver](freescale/gianfar.md)
  - [Checksum Offloading](freescale/gianfar.md#checksum-offloading)
  - [VLAN](freescale/gianfar.md#vlan)
  - [Multicasting](freescale/gianfar.md#multicasting)
  - [Padding](freescale/gianfar.md#padding)
  - [Ethtool](freescale/gianfar.md#ethtool)
- [Linux kernel driver for Compute Engine Virtual Ethernet (gve):](google/gve.md)
  - [Supported Hardware](google/gve.md#supported-hardware)
  - [PCI Bars](google/gve.md#pci-bars)
  - [Device Interactions](google/gve.md#device-interactions)
- [Linux Kernel Driver for Huawei Intelligent NIC(HiNIC) family](huawei/hinic.md)
  - [Overview:](huawei/hinic.md#overview)
  - [Supported PCI vendor ID/device IDs:](huawei/hinic.md#supported-pci-vendor-id-device-ids)
  - [Driver Architecture and Source Code:](huawei/hinic.md#driver-architecture-and-source-code)
  - [hinic_hwdev contains the following components:](huawei/hinic.md#hinic-hwdev-contains-the-following-components)
  - [HW Interface:](huawei/hinic.md#hw-interface)
  - [MGMT components:](huawei/hinic.md#mgmt-components)
  - [IO components:](huawei/hinic.md#io-components)
  - [HW device:](huawei/hinic.md#hw-device)
  - [hinic_dev contains the following components:](huawei/hinic.md#hinic-dev-contains-the-following-components)
  - [Miscellaneous](huawei/hinic.md#miscellaneous)
  - [Support](huawei/hinic.md#support)
- [Linux kernel driver for Huawei Ethernet Device Driver (hinic3) family](huawei/hinic3.md)
  - [Overview](huawei/hinic3.md#overview)
  - [Content](huawei/hinic3.md#content)
  - [Supported PCI vendor ID/device IDs](huawei/hinic3.md#supported-pci-vendor-id-device-ids)
  - [Source Code Structure of Hinic3 Driver](huawei/hinic3.md#source-code-structure-of-hinic3-driver)
  - [Management Interface](huawei/hinic3.md#management-interface)
- [Linux Base Driver for the Intel(R) PRO/100 Family of Adapters](intel/e100.md)
  - [Contents](intel/e100.md#contents)
  - [In This Release](intel/e100.md#in-this-release)
  - [Identifying Your Adapter](intel/e100.md#identifying-your-adapter)
  - [Driver Configuration Parameters](intel/e100.md#driver-configuration-parameters)
  - [Additional Configurations](intel/e100.md#additional-configurations)
  - [Support](intel/e100.md#support)
- [Linux Base Driver for Intel(R) Ethernet Network Connection](intel/e1000.md)
  - [Contents](intel/e1000.md#contents)
  - [Identifying Your Adapter](intel/e1000.md#identifying-your-adapter)
  - [Command Line Parameters](intel/e1000.md#command-line-parameters)
  - [Speed and Duplex Configuration](intel/e1000.md#speed-and-duplex-configuration)
  - [Additional Configurations](intel/e1000.md#additional-configurations)
  - [Support](intel/e1000.md#support)
- [Linux Driver for Intel(R) Ethernet Network Connection](intel/e1000e.md)
  - [Contents](intel/e1000e.md#contents)
  - [Identifying Your Adapter](intel/e1000e.md#identifying-your-adapter)
  - [Command Line Parameters](intel/e1000e.md#command-line-parameters)
  - [Additional Features and Configurations](intel/e1000e.md#additional-features-and-configurations)
  - [Support](intel/e1000e.md#support)
- [Linux Base Driver for Intel(R) Ethernet Multi-host Controller](intel/fm10k.md)
  - [Contents](intel/fm10k.md#contents)
  - [Identifying Your Adapter](intel/fm10k.md#identifying-your-adapter)
  - [Additional Features and Configurations](intel/fm10k.md#additional-features-and-configurations)
  - [Known Issues/Troubleshooting](intel/fm10k.md#known-issues-troubleshooting)
  - [Support](intel/fm10k.md#support)
- [idpf Linux\* Base Driver for the Intel(R) Infrastructure Data Path Function](intel/idpf.md)
  - [Identifying Your Adapter](intel/idpf.md#identifying-your-adapter)
  - [Additional Features and Configurations](intel/idpf.md#additional-features-and-configurations)
  - [Performance Optimization](intel/idpf.md#performance-optimization)
  - [Support](intel/idpf.md#support)
  - [Trademarks](intel/idpf.md#trademarks)
- [Linux Base Driver for Intel(R) Ethernet Network Connection](intel/igb.md)
  - [Contents](intel/igb.md#contents)
  - [Identifying Your Adapter](intel/igb.md#identifying-your-adapter)
  - [Command Line Parameters](intel/igb.md#command-line-parameters)
  - [Additional Features and Configurations](intel/igb.md#additional-features-and-configurations)
  - [Support](intel/igb.md#support)
- [Linux Base Virtual Function Driver for Intel(R) 1G Ethernet](intel/igbvf.md)
  - [Contents](intel/igbvf.md#contents)
  - [Identifying Your Adapter](intel/igbvf.md#identifying-your-adapter)
  - [Additional Features and Configurations](intel/igbvf.md#additional-features-and-configurations)
  - [Support](intel/igbvf.md#support)
- [Linux Base Driver for the Intel(R) Ethernet 10 Gigabit PCI Express Adapters](intel/ixgbe.md)
  - [Contents](intel/ixgbe.md#contents)
  - [Identifying Your Adapter](intel/ixgbe.md#identifying-your-adapter)
  - [Command Line Parameters](intel/ixgbe.md#command-line-parameters)
  - [Additional Features and Configurations](intel/ixgbe.md#additional-features-and-configurations)
  - [Known Issues/Troubleshooting](intel/ixgbe.md#known-issues-troubleshooting)
  - [Support](intel/ixgbe.md#support)
- [Linux Base Virtual Function Driver for Intel(R) 10G Ethernet](intel/ixgbevf.md)
  - [Contents](intel/ixgbevf.md#contents)
  - [Identifying Your Adapter](intel/ixgbevf.md#identifying-your-adapter)
  - [Known Issues/Troubleshooting](intel/ixgbevf.md#known-issues-troubleshooting)
  - [Support](intel/ixgbevf.md#support)
- [Linux Base Driver for the Intel(R) Ethernet Controller 700 Series](intel/i40e.md)
  - [Contents](intel/i40e.md#contents)
  - [Identifying Your Adapter](intel/i40e.md#identifying-your-adapter)
  - [Performance Optimization](intel/i40e.md#performance-optimization)
  - [Known Issues/Troubleshooting](intel/i40e.md#known-issues-troubleshooting)
  - [Support](intel/i40e.md#support)
- [Linux Base Driver for Intel(R) Ethernet Adaptive Virtual Function](intel/iavf.md)
  - [Contents](intel/iavf.md#contents)
  - [Overview](intel/iavf.md#overview)
  - [Identifying Your Adapter](intel/iavf.md#identifying-your-adapter)
  - [Additional Features and Configurations](intel/iavf.md#additional-features-and-configurations)
  - [Known Issues/Troubleshooting](intel/iavf.md#known-issues-troubleshooting)
  - [Support](intel/iavf.md#support)
- [Linux Base Driver for the Intel(R) Ethernet Controller 800 Series](intel/ice.md)
  - [Contents](intel/ice.md#contents)
  - [Identifying Your Adapter](intel/ice.md#identifying-your-adapter)
  - [Important Notes](intel/ice.md#important-notes)
  - [Additional Features and Configurations](intel/ice.md#additional-features-and-configurations)
  - [Performance Optimization](intel/ice.md#performance-optimization)
  - [Support](intel/ice.md#support)
  - [Trademarks](intel/ice.md#trademarks)
- [Marvell OcteonTx2 RVU Kernel Drivers](marvell/octeontx2.md)
  - [Contents](marvell/octeontx2.md#contents)
  - [Overview](marvell/octeontx2.md#overview)
  - [Drivers](marvell/octeontx2.md#drivers)
  - [Basic packet flow](marvell/octeontx2.md#basic-packet-flow)
  - [Devlink health reporters](marvell/octeontx2.md#devlink-health-reporters)
  - [Quality of service](marvell/octeontx2.md#quality-of-service)
  - [RVU Representors](marvell/octeontx2.md#rvu-representors)
  - [Function attributes](marvell/octeontx2.md#function-attributes)
  - [TC offload](marvell/octeontx2.md#tc-offload)
- [Linux kernel networking driver for Marvell’s Octeon PCI Endpoint NIC](marvell/octeon_ep.md)
  - [Contents](marvell/octeon_ep.md#contents)
  - [Overview](marvell/octeon_ep.md#overview)
  - [Supported Devices](marvell/octeon_ep.md#supported-devices)
  - [Interface Control](marvell/octeon_ep.md#interface-control)
- [Linux kernel networking driver for Marvell’s Octeon PCI Endpoint NIC VF](marvell/octeon_ep_vf.md)
  - [Overview](marvell/octeon_ep_vf.md#overview)
  - [Supported Devices](marvell/octeon_ep_vf.md#supported-devices)
- [Mellanox ConnectX(R) mlx5 core VPI Network Driver](mellanox/mlx5/index.md)
  - [Enabling the driver and kconfig options](mellanox/mlx5/kconfig.md)
  - [Switchdev](mellanox/mlx5/switchdev.md)
  - [Tracepoints](mellanox/mlx5/tracepoints.md)
  - [Ethtool counters](mellanox/mlx5/counters.md)
- [Meta Platforms Host Network Interface](meta/fbnic.md)
  - [Firmware Versions](meta/fbnic.md#firmware-versions)
  - [Configuration](meta/fbnic.md#configuration)
  - [Upgrading Firmware](meta/fbnic.md#upgrading-firmware)
  - [Statistics](meta/fbnic.md#statistics)
- [Hyper-V network driver](microsoft/netvsc.md)
  - [Compatibility](microsoft/netvsc.md#compatibility)
  - [Features](microsoft/netvsc.md#features)
- [Neterion’s (Formerly S2io) Xframe I/II PCI-X 10GbE driver](neterion/s2io.md)
  - [1. Introduction](neterion/s2io.md#introduction)
  - [2. Identifying the adapter/interface](neterion/s2io.md#identifying-the-adapter-interface)
  - [3. Features supported](neterion/s2io.md#features-supported)
  - [4. Command line parameters](neterion/s2io.md#command-line-parameters)
  - [5. Performance suggestions](neterion/s2io.md#performance-suggestions)
  - [6. Support](neterion/s2io.md#support)
- [Network Flow Processor (NFP) Kernel Drivers](netronome/nfp.md)
  - [Contents](netronome/nfp.md#contents)
  - [Overview](netronome/nfp.md#overview)
  - [Acquiring Firmware](netronome/nfp.md#acquiring-firmware)
  - [Devlink Info](netronome/nfp.md#devlink-info)
  - [Configure Device](netronome/nfp.md#configure-device)
  - [Statistics](netronome/nfp.md#statistics)
- [Linux Driver for the Pensando(R) Ethernet adapter family](pensando/ionic.md)
  - [Contents](pensando/ionic.md#contents)
  - [Identifying the Adapter](pensando/ionic.md#identifying-the-adapter)
  - [Enabling the driver](pensando/ionic.md#enabling-the-driver)
  - [Configuring the Driver](pensando/ionic.md#configuring-the-driver)
  - [Statistics](pensando/ionic.md#statistics)
  - [Support](pensando/ionic.md#support)
- [SMC 9xxxx Driver](smsc/smc9.md)
- [Linux Driver for the Synopsys(R) Ethernet Controllers “stmmac”](stmicro/stmmac.md)
  - [Contents](stmicro/stmmac.md#contents)
  - [In This Release](stmicro/stmmac.md#in-this-release)
  - [Feature List](stmicro/stmmac.md#feature-list)
  - [Kernel Configuration](stmicro/stmmac.md#kernel-configuration)
  - [Command Line Parameters](stmicro/stmmac.md#command-line-parameters)
  - [Driver Information and Notes](stmicro/stmmac.md#driver-information-and-notes)
  - [Debug Information](stmicro/stmmac.md#debug-information)
  - [Support](stmicro/stmmac.md#support)
- [Texas Instruments CPSW ethernet driver](ti/cpsw.md)
  - [Multiqueue & CBS & MQPRIO](ti/cpsw.md#multiqueue-cbs-mqprio)
  - [Test setup](ti/cpsw.md#test-setup)
  - [Test setup for examples](ti/cpsw.md#test-setup-for-examples)
- [Texas Instruments CPSW switchdev based ethernet driver](ti/cpsw_switchdev.md)
  - [Port renaming](ti/cpsw_switchdev.md#port-renaming)
  - [Dual mac mode](ti/cpsw_switchdev.md#dual-mac-mode)
  - [Devlink configuration parameters](ti/cpsw_switchdev.md#devlink-configuration-parameters)
  - [Bridging in dual mac mode](ti/cpsw_switchdev.md#bridging-in-dual-mac-mode)
  - [Enabling “switch”](ti/cpsw_switchdev.md#enabling-switch)
  - [Bridge setup](ti/cpsw_switchdev.md#bridge-setup)
  - [On/off STP](ti/cpsw_switchdev.md#on-off-stp)
  - [VLAN configuration](ti/cpsw_switchdev.md#vlan-configuration)
  - [Add extra VLANs](ti/cpsw_switchdev.md#add-extra-vlans)
  - [Multicast flooding](ti/cpsw_switchdev.md#multicast-flooding)
  - [Access and Trunk port](ti/cpsw_switchdev.md#access-and-trunk-port)
  - [NFS](ti/cpsw_switchdev.md#nfs)
- [Texas Instruments K3 AM65 CPSW NUSS switchdev based ethernet driver](ti/am65_nuss_cpsw_switchdev.md)
  - [Port renaming](ti/am65_nuss_cpsw_switchdev.md#port-renaming)
  - [Multi mac mode](ti/am65_nuss_cpsw_switchdev.md#multi-mac-mode)
  - [Devlink configuration parameters](ti/am65_nuss_cpsw_switchdev.md#devlink-configuration-parameters)
  - [Enabling “switch”](ti/am65_nuss_cpsw_switchdev.md#enabling-switch)
  - [Bridge setup](ti/am65_nuss_cpsw_switchdev.md#bridge-setup)
  - [On/off STP](ti/am65_nuss_cpsw_switchdev.md#on-off-stp)
  - [VLAN configuration](ti/am65_nuss_cpsw_switchdev.md#vlan-configuration)
  - [Add extra VLANs](ti/am65_nuss_cpsw_switchdev.md#add-extra-vlans)
  - [Multicast flooding](ti/am65_nuss_cpsw_switchdev.md#multicast-flooding)
  - [Access and Trunk port](ti/am65_nuss_cpsw_switchdev.md#access-and-trunk-port)
- [TLAN driver for Linux](ti/tlan.md)
  - [I. Supported Devices](ti/tlan.md#i-supported-devices)
  - [II. Driver Options](ti/tlan.md#ii-driver-options)
  - [III. Things to try if you have problems](ti/tlan.md#iii-things-to-try-if-you-have-problems)
- [Texas Instruments ICSSG PRUETH ethernet driver](ti/icssg_prueth.md)
  - [ICSSG Firmware](ti/icssg_prueth.md#icssg-firmware)
  - [Firmware Statistics](ti/icssg_prueth.md#firmware-statistics)
- [Linux Base Driver for WangXun(R) 10 Gigabit PCI Express Adapters](wangxun/txgbe.md)
  - [Contents](wangxun/txgbe.md#contents)
  - [Support](wangxun/txgbe.md#support)
- [Linux Base Virtual Function Driver for Wangxun(R) 10/25/40 Gigabit Ethernet](wangxun/txgbevf.md)
  - [Support](wangxun/txgbevf.md#support)
- [Linux Base Driver for WangXun(R) Gigabit PCI Express Adapters](wangxun/ngbe.md)
  - [Support](wangxun/ngbe.md#support)
- [Linux Base Virtual Function Driver for Wangxun(R) Gigabit Ethernet](wangxun/ngbevf.md)
  - [Support](wangxun/ngbevf.md#support)
